[gd_scene load_steps=5 format=2]

[ext_resource path="res://BattleFields/BaseBattleField.tscn" type="PackedScene" id=1]
[ext_resource path="res://BattleFields/Player/SuperBattleField.gd" type="Script" id=2]
[ext_resource path="res://BattleFields/Player/Utils/PlayerBumper.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1.16539, 20.0974 )

[node name="SuperBattleField" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="PlayerBumper" parent="Field" index="0" instance=ExtResource( 3 )]
position = Vector2( -28.5057, 27.5699 )

[node name="HitZone" type="Area2D" parent="Field" index="1"]
position = Vector2( 36, 29 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Field/HitZone" index="0"]
shape = SubResource( 1 )

[node name="HitZoneSprite" type="ColorRect" parent="Field/HitZone" index="1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1.0
margin_top = -20.0
margin_right = 1.0
margin_bottom = 20.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BumperTimer" type="Timer" parent="." index="3"]
wait_time = 0.5
autostart = true
